OW-285 some additional changes

--- a/src/components/pledge/Pledge.css
+++ b/src/components/pledge/Pledge.css
@@ -293,6 +293,14 @@ input[type=range]:focus::-ms-fill-upper {
   display: flex;
   margin-left: 0.5%;
   margin-top: -5.5px;
+  pointer-events: none;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari*/
+  -khtml-user-select: none; /* Konqueror */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 @-moz-document url-prefix() {
