--- a/src/components/graph/Graph.css
+++ b/src/components/graph/Graph.css
@@ -18,7 +18,8 @@
   box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
   border-radius: 8px;
   position: absolute;
-  z-index: 50;
+  /* To resolve bug where the drop-down options are covered */
+  /*z-index: 50;*/
   composes: baseFontBold from './../../static/css-components/fonts.css';
   width: 35px;
   text-align: center;
