Change the relative dom of how tabs are being displayed for counter party

--- a/src/components/margin-agreement/MarginAgreementList.css
+++ b/src/components/margin-agreement/MarginAgreementList.css
@@ -306,12 +306,13 @@
 /*- Menu Tabs 14--------------------------- */
 .tabs14 {
     display: inline-flex;
-    float:left;
-    width:40%;
+    /*float:left;*/
+    /*width:40%;*/
     font-size:93%;
     line-height:normal;
     position: absolute;
-    top: 18px;
+    /*top: 18px;*/
+    top: -33px;
 }
 @-moz-document url-prefix() {
     .tabs14 {
@@ -508,6 +509,10 @@
 
 .greyText {
     color: #c9c9c9;
+}
+
+.counterPartyCont {
+    position: relative;
 }
 
 .noMatched {
