--- a/src/components/margin-agreement/sub-components/MarginAgreementAssets.css
+++ b/src/components/margin-agreement/sub-components/MarginAgreementAssets.css
@@ -9,3 +9,10 @@
     width: 68px;
     font-size: 15px;
 }
+
+.comment {
+    margin-top: 10px;
+    color: #4A4A4A;
+    font-size: 14px;
+    line-height: 17px;
+}
