--- a/src/components/margin-agreement/sub-components/MarginAgreementAssets.css
+++ b/src/components/margin-agreement/sub-components/MarginAgreementAssets.css
@@ -16,3 +16,10 @@
     font-size: 14px;
     line-height: 17px;
 }
+
+.findPortfolio {
+    color: #6EA6E8;
+    cursor: pointer;
+    margin: 10px 0;
+    font-size: 16px;
+}
