--- a/src/components/margin-agreement/sub-components/CounterPartyUpload.css
+++ b/src/components/margin-agreement/sub-components/CounterPartyUpload.css
@@ -1,6 +1,6 @@
 div.componentStyle {
-    background-color: #FFFFFF;
-    box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
+    /*background-color: #FFFFFF;*/
+    /*box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);*/
     border-radius: 8px;
     display: inline-block;
     width: 100%;
