--- a/src/components/margin-agreement/sub-components/MarginAgreementAssets.css
+++ b/src/components/margin-agreement/sub-components/MarginAgreementAssets.css
@@ -18,8 +18,8 @@
 }
 
 .findPortfolio {
-    color: #6EA6E8;
+    color: #4A90E2;
     cursor: pointer;
-    margin: 10px 0;
+    margin: 15px 0;
     font-size: 16px;
 }
