--- a/src/components/margin-call/MarginCall.css
+++ b/src/components/margin-call/MarginCall.css
@@ -1,13 +1,14 @@
 @value newAcuoBlue from '../../static/css-components/colors.css';
 
 .container{
-  margin: 2% 1%;
+  margin: 2% auto;
   background-color: #FFFFFF;
   box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
   border-radius: 8px;
   min-height: 410px;
-  display: inline-block;
-  width: 97%;
+  /*display: inline-block;*/
+  /*width: 97%;*/
+  width: 1400px;
   padding: 10px;
 
   position: relative;
