--- a/src/components/margin-agreement-upload/MarginAgreementUpload.css
+++ b/src/components/margin-agreement-upload/MarginAgreementUpload.css
@@ -2,14 +2,14 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 99%;
+    width: calc(100% - 20px);
     height: 760px;
     background-color: #FAFAFA;
     box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
     border: 1px solid #9B9B9B;
     border-radius: 8px;
     z-index: 50;
-    padding: 5px;
+    padding: 10px;
     overflow: scroll;
     display:none;
 }
