OW-45 css colour changes

--- a/src/static/css-components/colors.css
+++ b/src/static/css-components/colors.css
@@ -2,8 +2,8 @@
 @value acuoAction: #00376C;
 @value acuoGrey: #5c5b5c;
 
-@value acuoActionRed: #DE2424;
-@value acuoActionOrange: #FA7528;
-@value acuoActionGreen: #11BF0B;
+@value acuoActionRed: #D0021B;
+@value acuoActionOrange: #EB572B;
+@value acuoActionGreen: #005544;
 
 @value newAcuoBlue: #6389ad;
