--- a/src/static/commonStyles/common.css
+++ b/src/static/commonStyles/common.css
@@ -8,7 +8,21 @@
 
 .compTitle {
     font-size: 24px;
-    composes: baseFontBold from '../../static/css-components/fonts.css';
+    composes: baseFontBold from '../css-components/fonts.css';
     line-height: 29px;
     color: #6389AD;
+}
+
+.agreementBtnStyle{
+    width: 93px;
+    height: 32px;
+    background-color: #FAFAFA;
+    border: 1px solid #979797;
+    border-radius: 20px;
+    font-size: 13px;
+    composes: baseFontBold from '../css-components/fonts.css';
+    line-height: 16px;
+    color: #4A4A4A;
+    margin: 0 10px;
+    cursor: pointer;
 }
