--- a/src/components/agreements/Agreements.css
+++ b/src/components/agreements/Agreements.css
@@ -2,6 +2,7 @@
     min-width: 1000px;
     min-height: 500px;
     composes: compContainer from '../../static/commonStyles/common.css';
+    position: relative;
 }
 
 .compTitle {
