--- a/src/static/commonStyles/common.css
+++ b/src/static/commonStyles/common.css
@@ -41,14 +41,11 @@
     color: #272727;
 }
 
-.tableRowBlue {
-    background-color: #DCEEFF;
-}
-
-.tableRowWhite {
+.popupContainer {
+    position: absolute;
     background-color: #FFFFFF;
-}
-
-.tableRowGrey {
-    background-color: #EEEEEE;
+    border: 1px solid #9B9B9B;
+    padding: 10px;
+    box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
 }
