Change style of close on popup

--- a/src/components/common/SimpleCenteredPopup.css
+++ b/src/components/common/SimpleCenteredPopup.css
@@ -12,7 +12,7 @@
 
 .closeButton {
     color: #585858;
-    text-align: right;
+    float: right;
     font-size: 25px;
     cursor: pointer;
     margin-bottom: 10px;
