--- a/src/components/agreements/sub-components/ImportAgreements.css
+++ b/src/components/agreements/sub-components/ImportAgreements.css
@@ -1,3 +1,7 @@
+.container {
+    margin: 10px;
+}
+
 .importBtnStyle {
     composes: agreementBtnStyle from '../../../static/commonStyles/common.css';
 }
