--- a/src/static/commonStyles/common.css
+++ b/src/static/commonStyles/common.css
@@ -27,6 +27,12 @@
     cursor: pointer;
 }
 
+.agreementBtnStyleDisabled {
+    composes: agreementBtnStyle;
+    border: 1px solid #D5DADF;
+    color: #D5DADF;
+}
+
 .tableHeader {
     font-size: 14px;
     line-height: 17px;
@@ -45,7 +51,6 @@
     position: absolute;
     background-color: #FFFFFF;
     border: 1px solid #9B9B9B;
-    padding: 10px;
     box-shadow: 2px 3px 5px 0 rgba(0, 0, 0, 0.5);
     border-radius: 8px;
 }
