Change how cross button is being displayed on popup

--- a/src/components/common/SimpleCenteredPopup.css
+++ b/src/components/common/SimpleCenteredPopup.css
@@ -12,7 +12,9 @@
 
 .closeButton {
     color: #585858;
-    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
     font-size: 25px;
     cursor: pointer;
     margin: 5px;
