--- a/src/components/common/SimpleCenteredPopup.css
+++ b/src/components/common/SimpleCenteredPopup.css
@@ -1,4 +1,20 @@
+/* https://www.w3schools.com/howto/howto_css_modals.asp */
+.overlay {
+    /*display: none; !* Hidden by default *!*/
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
 .popContainer {
+    z-index: 2;
     composes: popupContainer from '../../static/commonStyles/common.css';
     top: 0;
     right: 0;
