--- a/src/components/common/SimpleCenteredPopup.css
+++ b/src/components/common/SimpleCenteredPopup.css
@@ -10,19 +10,16 @@
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0, 0, 0); /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    padding-top: 100px;
 }
 
 .popContainer {
-    z-index: 2;
     composes: popupContainer from '../../static/commonStyles/common.css';
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     margin: auto;
     height: 400px;
     width: 800px;
-    overflow: scroll;
+    overflow: auto;
+    position: relative;
 }
 
 .closeButton {
