OW-218 Add new component for ‘Other Details’ menu on agreements creation

--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -16,3 +16,11 @@
 .line > .dropDown {
     width: 250px;
 }
+
+.line > .inputTextBox {
+    width: 250px;
+    height: 25px;
+    border: 1px solid #979797;
+    font-size: 13px;
+    line-height: 16px;
+}
