--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -85,6 +85,7 @@
 
 .filtersList {
   position: absolute;
+  top: 30px;
   left: 0;
   width: 100%;
   background-color: #fff;
@@ -113,4 +114,9 @@
 .filtersList li:active {
   background-color: #55a3ff;
   color: #fff;
+}
+
+.maxHeightOptions {
+  max-height: 160px;
+  overflow: auto;
 }
