OW-218 Add other jurisdiction feature of selection box

--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -24,3 +24,7 @@
     font-size: 13px;
     line-height: 16px;
 }
+
+.btnStyleActive {
+    composes: agreementBtnStyle from '../../../static/commonStyles/common.css';
+}
