OW-218 Add new component for sole toggle on other details

--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -27,4 +27,11 @@
 
 .btnStyleActive {
     composes: agreementBtnStyle from '../../../static/commonStyles/common.css';
+    /* Clear margin */
+    margin: 0;
+}
+
+.flexLine {
+    display: flex;
+    align-items: center;
 }
