Add slight modification to other details screen of agreements creation

--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -31,6 +31,12 @@
     margin: 0;
 }
 
+.btnStyleInactive {
+    composes: agreementBtnStyleDisabled from '../../../static/commonStyles/common.css';
+    /* Clear margin */
+    margin: 0;
+}
+
 .flexLine {
     display: flex;
     align-items: center;
