--- a/src/components/common/SelectionBox.css
+++ b/src/components/common/SelectionBox.css
@@ -6,7 +6,7 @@
 }
 
 .listContainer > .listItem:hover {
-    background-color: #eeeeee;
+    /*background-color: #eeeeee;*/
 }
 
 .listContainer > li:nth-child(odd) {
@@ -16,3 +16,19 @@
 .listContainer > li:nth-child(even) {
     background-color: #DCEEFF;
 }
+
+.removeBtnStyle {
+    composes:  agreementBtnStyle from '../../static/commonStyles/common.css';
+    margin: 0;
+    width: 50px;
+    height: 14px;
+    font-size: 7px;
+    line-height: 7px;
+
+}
+
+.listItem {
+    display: flex;
+    justify-content: space-between;
+}
+
