OW-223 Change how forms are being loaded

--- a/src/components/agreements-create/CreateAgreementsMain.css
+++ b/src/components/agreements-create/CreateAgreementsMain.css
@@ -56,6 +56,7 @@
 
 .subMenuItemSelected {
     composes: subMenuItem;
+    composes: baseFontBold from '../../static/css-components/fonts.css';
     color: #4E83B5;
 }
 
