--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -10,12 +10,12 @@
 }
 
 /* Padding when there's overflow */
-.createContent::after {
-    content: '';
-    display: block;
-    padding-bottom: 16px;
-    width: 100%;
-}
+/*.createContent::after {*/
+    /*content: '';*/
+    /*display: block;*/
+    /*padding-bottom: 16px;*/
+    /*width: 100%;*/
+/*}*/
 
 .createContentFlexTwo {
     composes: createContent;
