--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -35,6 +35,11 @@
     margin: 10px 0;
 }
 
+.workflowLine {
+    margin: 10px 0;
+    padding: 5px 30px;
+}
+
 .line > .dropDown {
     width: 250px;
 }
