OW-221 Slight functionality change to toggle other options

--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -40,6 +40,11 @@
     padding: 5px 30px;
 }
 
+.workflowGroup {
+    display: flex;
+    flex-direction: column;
+}
+
 .line > .dropDown {
     width: 250px;
 }
