OW-224 Add interactions for local details of call driver section

--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -83,6 +83,11 @@
     align-items: center;
 }
 
+.flexColumn {
+    display: flex;
+    flex-direction: column;
+}
+
 .agreementsSectionContainer {
     display: flex;
     flex-direction: row;
