--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -61,6 +61,12 @@
     line-height: 16px;
 }
 
+.inputTextBoxDisabled {
+    composes: inputTextBox;
+    background-color: #EEEEEE;
+    border: none;
+}
+
 .smallTextBox {
     composes: inputTextBox;
     width: 70px;
@@ -101,6 +107,12 @@
 .agreementsSectionLeft {
     flex: 1;
     margin-right: 10px;
+}
+
+.agreementsSectionMiddle {
+    flex: 1;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 .agreementsSectionRight {
