OW-225 Add split by role interaction for other 2 textboxes

--- a/src/components/agreements-create/sub-components/ContentBody.css
+++ b/src/components/agreements-create/sub-components/ContentBody.css
@@ -89,14 +89,14 @@
     align-items: center;
 }
 
+.flexCont {
+    display: flex;
+    flex-direction: row;
+}
+
 .flexColumn {
     display: flex;
     flex-direction: column;
-}
-
-.agreementsSectionContainer {
-    display: flex;
-    flex-direction: row;
 }
 
 .agreementsSectionHeader {
