--- a/src/components/margin-agreement/MarginAgreementList.css
+++ b/src/components/margin-agreement/MarginAgreementList.css
@@ -395,6 +395,11 @@
     /*flex:2;*/
 }
 
+.inputBoxDisabled{
+    composes: inputBox;
+    border: none;
+}
+
 .usd{
     display: inline-block;
     padding-left: 5px;
