OW-290 Change dd component to react-select

--- a/index.template.ejs
+++ b/index.template.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/react-dropzone/dropzone.css">
     <link rel="stylesheet" href="css/react-dropzone/filepicker.css">
     <link rel="stylesheet" href="css/react-dropzone/filepickerRecon.css">
+    <link rel="stylesheet" href="css/react-select/react-select.css">
 
 </head>
 <body>
