OW-83 babel polyfill and svg issue on IE

--- a/src/static/reset.css
+++ b/src/static/reset.css
@@ -52,3 +52,20 @@ html,body { height:100%; }
 body {
     background: url('../images/common/ACUO-watermark.svg') no-repeat 50% fixed;
 }
+
+/*
+ * Let's target IE to respect aspect ratios and sizes for img tags containing SVG files
+ *
+ * [1] IE9
+ * [2] IE10+
+ */
+/* 1 */
+.ie9 img[src$=".svg"] {
+    width: 100%;
+}
+/* 2 */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    img[src$=".svg"] {
+        width: 100%;
+    }
+}
