--- a/src/components/graph/Graph.css
+++ b/src/components/graph/Graph.css
@@ -34,3 +34,21 @@
   bottom: 15px;
   left: 15px;
 }
+
+@media screen and (min-width: 768px) {
+  .svgGraph {
+    min-height: 245px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .svgGraph {
+    min-height: 328px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .svgGraph {
+    min-height: 460px;
+  }
+}
