--- a/src/components/navigation-bar/NavigationBar.css
+++ b/src/components/navigation-bar/NavigationBar.css
@@ -8,7 +8,7 @@
     /*display: flex;*/
     position: relative;
     border-bottom: 1px solid #d9d9d9;
-    /*min-width: 1200px;*/
+    min-width: 1200px;
 }
 
 .flex1{
